--- a/templates/books/index.html
+++ b/templates/books/index.html
@@ -3,16 +3,18 @@
 {% block content %}
 
 {% for book in all_books %}
-    <div>
-        <p>Author: {{book.author.last_name}}, {{book.author.first_name}}</p>
+    <div class="book">
+        <p>Author: {{book.author.last_name}}, {{book.author.first_name}}</p><br><br>
         <p>Title: {{book.title}}</p>
-        <p>Genre: {{book.genre}}</p>
-        <p>Publisher: {{book.publisher}}</p>
+        <p>Genre: {{book.publisher}}</p>
+        <p>Publisher: {{book.genre}}</p>
     </div>
+
+    <a href="/books/{{book.id}}">{{book.title}}</a>
 
     <form action="/books/{{book.id}}/delete" method="POST">
         <button type="submit">Delete</button>
-</form>
+    </form>
 
 
 {% endfor %}
