--- a/templates/books/show.html
+++ b/templates/books/show.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<div>
-    <p>{{book.title}}</p>
+<div class="book">
+    <h3>{{book.title}}</h3>
     <hr>
     <p>{{book.author.last_name}}, {{book.author.first_name}}</p>
     <p>Genre: {{book.genre}}</p>
