--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-This will be the homepage. Authors and Books will go here.
+<div class="book">
+<h1>CodeClan Book Repository</h1>
+<h4>Welcome to the CodeClan Book Repository</h4>
+<p>Here you can look at, add, update and remove information about books as many times as you want, we never close (except when you Ctrl+C out of Flask)!!</p>
+<p>Click the <strong>Books</strong> link in the menu bar above to check the list of books and edit book details</p>
+<p>Choose the <strong>New Book</strong> link to add the details of a new book.</p>
+</div>
 
 {% endblock %}
