--- a/static/style.css
+++ b/static/style.css
@@ -1,27 +1,21 @@
 body{
   font-family: "Helvetica", arial, sans-serif; font-size: 16px;
+  background-image: url(https://www.detroitlabs.com/wp-content/uploads/2018/02/alfons-morales-YLSwjSy7stw-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .book {
   border: 1px solid #ccc;
   width: 300px;
-  min-height: 68px;
-  padding: 10px;
-  display: flex;
-  line-height: 18px;
+  min-height: 350px;
+  padding: 35px;
+  line-height: 30px;
   margin-bottom: 10px;
-}
-
-.name {
-  font-weight: bold;
-  margin-bottom: 0.5em;
-  margin-right: 0.3em;
-}
-
-.duration{
-  color: #8899a6;
-  font-size: 13px;
-  margin-left: 20px;
+  background-image: url(https://i.pinimg.com/originals/4c/65/f9/4c65f913798dcd566fb929d0973a37e6.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: white;
 }
 
 .buttons {
@@ -43,20 +37,10 @@ input, select, button {
   box-sizing: border-box;
 }
 
-.trash-button{
-  display: contents;
-  font-size: 65%;
-}
-
-
-.delete-form{
-  display: inline;
-}
-
 .menu{
   display: flex;
   padding: 10px;
-  background-color: grey;
+  background-color: cornflowerblue ;
   color: white;
 }
 
@@ -80,4 +64,16 @@ input, select, button {
   flex-wrap: wrap;
   width: 300px;
   margin: 0 auto;
+  /* padding: 5px; */
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding: 16px;
+  background-color: cornflowerblue;
+  color: white;
+  text-align: center;
 }
