--- a/templates/books/edit.html
+++ b/templates/books/edit.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-<form action="/books/{{book.id}}" method="POST">
+<div class="book">
+  <h2>Update Book</h2>
+  <form action="/books/{{book.id}}" method="POST">
   <div>
     <label for="title">Title:</label>
     <input type="text"
@@ -42,4 +44,5 @@
   </div>
   <button type="submit">Update Book</button>
 </form>
+</div>
 {% endblock %}
