--- a/templates/books/new.html
+++ b/templates/books/new.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 <form action="/books" method="POST">
-
+<div class="book">
+    <h2>Add Book</h2>
+    <p>Add a new book to the repository</p>
     <div>
         <label for="title">Title:</label>
         <input type="text" 
@@ -39,7 +41,7 @@
             {% endfor %}
         </select>
     </div>
-
     <button type="submit">Add Book</button>
 </form>
+</div>
 {% endblock %}
