--- a/templates/books/index.html
+++ b/templates/books/index.html
@@ -7,8 +7,8 @@
         <h3>{{book.title}}</h3>
         <hr>
         <p>Author: {{book.author.last_name}}, {{book.author.first_name}}</p>
-        <p>Genre: {{book.publisher}}</p>
-        <p>Publisher: {{book.genre}}</p>
+        <p>Genre: {{book.genre}}</p>
+        <p>Publisher: {{book.publisher}}</p>
 
 
     <a href="/books/{{book.id}}">{{book.title}}</a>
